Added option to choose the sheet size between A4 and A3 by enum. Before was just A3.

--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,12 @@ db.sqlite3-journal
 instance/
 .webassets-cache
 
+# Assets
+assets/images/raw_cards/*
+assets/images/proxies/*
+!assets/images/raw_cards/.gitkeep
+!assets/images/proxies/.gitkeep
+
 # Scrapy stuff:
 .scrapy
 
